Fixed spacing mistakes on blog list page

--- a/src/static/src/styles/pages/_blog.scss
+++ b/src/static/src/styles/pages/_blog.scss
@@ -40,12 +40,12 @@
             .blog-list__title {
                 font-weight: bold;
                 line-height: 3rem;
+                margin-bottom: 1.20rem;
             }
 
             .blog-list__subtitle {
                 color: $gray-light;
                 margin-bottom: 0;
-                line-height: 1.2rem;
             }
 
 @media screen and (max-width: $break-medium) {
@@ -68,15 +68,13 @@
         .blog-list__date {
             font-size: 0.8rem;
             line-height: 0.8rem;
+            margin-bottom: 1.5rem;
         }
 
         .blog-list__title {
             font-size: 1.6rem;
             margin-bottom: 0.85rem;
-        }
-
-        .blog-list__subtitle {
-            line-height: 2rem;
+            line-height: 2.5rem;
         }
 }
 
